--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <!-- Google Fonts -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Poppins:wght@300;400;500&family=Ubuntu:wght@300;400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Poppins:wght@300;400;500&family=Roboto:wght@100;300;400;500;700;900&family=Ubuntu:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
     <!-- Custom CSS styles -->
